--- a/environment.yml
+++ b/environment.yml
@@ -129,6 +129,7 @@ dependencies:
   - zeromq=4.3.4=h2531618_0
   - zlib=1.2.12=h7f8727e_2
   - zstd=1.5.2=ha4553b6_0
+  - pip=21.2
   - pip:
     - appdirs==1.4.4
     - argon2-cffi-bindings==21.2.0
@@ -174,11 +175,9 @@ dependencies:
     - numpy==1.21.5
     - opencv-python==4.6.0.66
     - pillow==8.4.0
-    - pip==21.2.4
     - pooch==1.6.0
     - portalocker==2.4.0
     - psutil==5.8.0
-    - pybrain==0.3.1
     - pyrsistent==0.18.0
     - pysocks==1.7.1
     - python-magic==0.4.27
@@ -201,3 +200,4 @@ dependencies:
     - vidgear==0.2.5
     - webencodings==0.5.1
     - widgetsnbextension==3.5.2
+    - dropbox==11.32.0
